--- a/src/components/QuantitativeResult.css
+++ b/src/components/QuantitativeResult.css
@@ -15,3 +15,9 @@
     align-items: center;
     gap: 5px;
 }
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
